--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-
+*{
+    background-image: url(./assets/brazil-croatia-berlin-june-13-2006-2-1442377\(1\).jpg);
+    background-size: cover;
+}
 #deck {
     position: fixed;
-    border: 1px solid black;
+    border: 2px solid black;
     z-index: 1;
     height: 500px;
     width: 500px;
-
+    background-image: url(./assets/soccer-field-1147736.jpg);
+    background-size: 500px 500px;
   }
   
   #player1 {
@@ -15,7 +19,7 @@
     height: 50px;
     background-color: blue;
     z-index: 1;
-    border: solid black 1px;
+    border: solid black 2px;
 
   }
   
@@ -26,16 +30,17 @@
     height: 50px;
     background-color: red;
     z-index: 1;
-    border: solid black 1px;
+    border: solid black 2px;
   }
   
   #ball {
     position: absolute;
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     background-color: green;
     z-index: 1;
-    border: solid black 1px;
+    border: solid black 1.5px;
+    border-radius: 50%;
 
   }
 
@@ -49,11 +54,12 @@
     #scoreboard {
     font-size: 24px;
     font-weight: bold;
+    z-index: 3;
     }
     
     #restart-btn {
     background-color: blue;
-    color: white;
+    color: black;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
