--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "SCOREBOARD-ANALOG";
+  src: url(./analogFonts/digital-7.ttf);
+}
+
 html{
     background-image: url(./assets/brazil-croatia-berlin-june-13-2006-2-1442377\(1\).jpg); /*Free Asset Available in FreeImages.com Img reference: https://www.freeimages.com/photo/brazil-croatia-berlin-june-13-2006-2-1442377*/
     background-size: cover;
@@ -20,7 +25,7 @@ html{
     background-color: blue;
     z-index: 1;
     border: solid black 2px;
-    border-radius: 25%;
+    border-radius: 15px;
 
   }
   
@@ -32,7 +37,7 @@ html{
     background-color: red;
     z-index: 1;
     border: solid black 2px;
-    border-radius: 25%;
+    border-radius: 15px;
   }
   
   #ball {
@@ -54,10 +59,20 @@ html{
     }
     
     #scoreboard {
-    font-size: 24px;
-    font-weight: bold;
-    z-index: 3;
-    }
+        font-family: "SCOREBOARD-ANALOG";
+        font-size: 24px;
+        font-weight: bold;
+        z-index: 3;
+        position: relative;
+        transform: translateX(600px);
+        border: 1px solid black;
+        border-radius: 15px;
+        color: rgb(255, 51, 0);
+        box-shadow: 15px 15px 10px red ;
+        padding: 15px;
+        letter-spacing: 3.5px;
+        background-color: rgb(23, 21, 21);
+      }
     
     #restart-btn {
     background-color: blue;
